<resources>

    <!-- Name for the application [CHAR LIMIT=12] -->
    <string name="app_name">Book Store</string>

    <!-- Label for overflow menu option that inserts fake book data into the app [CHAR LIMIT=20] -->
    <string name="action_insert_dummy_data">Insert Dummy Data</string>

    <!-- Label for overflow menu option that deletes all book data in the app [CHAR LIMIT=20] -->
    <string name="action_delete_all_entries">Delete All Books</string>

    <!-- Title for the activity to add a new book [CHAR LIMIT=20] -->
    <string name="editor_activity_title_new_book">Add a Book</string>

    <!-- Label for editor menu option to save book and leave editor [CHAR LIMIT=20] -->
    <string name="action_save">Save</string>

    <!-- Label for editor overflow menu option that deletes the current book [CHAR LIMIT=20] -->
    <string name="action_delete">Delete</string>

    <!-- Label for book category of attributes in the editor [CHAR LIMIT=30] -->
    <string name="category_book_title">Book Title</string>

    <!-- Label for price category of attributes in the editor [CHAR LIMIT=30] -->
    <string name="category_book_price">Book Price</string>

    <!-- Label for quantity category of attributes in the editor [CHAR LIMIT=30] -->
    <string name="category_book_quantity">Quantity</string>

    <!-- Label for supplier category of attributes in the editor [CHAR LIMIT=30] -->
    <string name="category_book_supplier">Supplier Name</string>

    <!-- Label for supplier category of attributes in the editor [CHAR LIMIT=30] -->
    <string name="category_book_supplier_phone">Supplier Phone Number</string>



    <!-- Text hint for title field in the editor [CHAR LIMIT=30] -->
    <string name="hint_book_title">Insert Title</string>

    <!-- Text hint for price field in the editor [CHAR LIMIT=30] -->
    <string name="hint_book_price">Insert Price</string>

    <!-- Text hint for quantity field in the editor [CHAR LIMIT=30] -->
    <string name="hint_book_quantity">Insert Quantity</string>

    <!-- Text hint for supplier field in the editor [CHAR LIMIT=30] -->
    <string name="hint_book_supplier">Insert Supplier</string>

    <!-- Text hint for supplier field in the editor [CHAR LIMIT=30] -->
    <string name="hint_book_supplier_phone">Insert Phone Number</string>

</resources>
